[workspace]
members = [
    "crates/*",
    "bindings/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mathew Shen <datahonor@gmail.com>"]
documentation = "https://docs.rs/crate/shapley"
repository = "https://github.com/shenxiangzhuang/shapley"
readme = "README.md"
license = "MIT"
description = "A fast shapley score calculator"
keywords = ["GameTheory", "Shapley"]

[workspace.dependencies]
anyhow = "1.0.98"
statrs = "0.18.0"
