[package]
name = "shapley-py"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
publish = false

[dependencies]
# this crate won't be published, we always use the local version
shapley = { version = ">=0", path = "../../crates/shapley" }

[dependencies.pyo3]
version = "0.25.0"
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
features = ["abi3-py39"]
