[package]
name = "shapley"
version.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
readme = "README.md"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shapley"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
rayon = "1.10.0"
statrs.workspace = true

[dev-dependencies]
maplit = "1.0.2"
